--- a/src/assets/sass/components/product/product.scss
+++ b/src/assets/sass/components/product/product.scss
@@ -377,7 +377,7 @@
         margin: 0 auto;
         margin-bottom: 120px;
 
-        @media (max-width: $maxMobWidth) {
+        @media (max-width: $maxTabletWidth) {
             margin-bottom: 80px;
         }
     }
