--- a/src/assets/sass/components/blog/blog.scss
+++ b/src/assets/sass/components/blog/blog.scss
@@ -3,7 +3,11 @@
     margin: 0 auto;
     margin-bottom: 120px;
 
-    @media (max-width: $maxMobWidth) {
+    @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+        padding: 0 24px;
+    }
+
+    @media (max-width: $maxTabletWidth) {
         margin-bottom: 80px;
     }
 }
