--- a/src/assets/sass/components/category/category.scss
+++ b/src/assets/sass/components/category/category.scss
@@ -167,6 +167,27 @@
 
         @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
             margin-bottom: 80px;
+
+            .slider__carousel {
+                overflow: visible;
+            }
+
+            .main-categories__content__list {
+                @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+                    display: grid;
+                    grid-template-columns: repeat(2, 328px);
+                    gap: 32px;
+                    justify-content: center;
+                }
+
+                @media (max-width: $maxTabletWidth) and (min-width: 1096px) {
+                    grid-template-columns: repeat(3, 328px);
+                }
+
+                @media (max-width: $maxTabletWidth) and (min-width: 1456px) {
+                    grid-template-columns: repeat(4, 328px);
+                }
+            }
         }
 
 
