--- a/src/assets/sass/components/main-categories.scss
+++ b/src/assets/sass/components/main-categories.scss
@@ -18,15 +18,32 @@
             grid-template-columns: 1fr 1fr 1fr 1fr;
             gap: 32px;
 
-            @media (max-width: $maxTabletWidth) {
-                display: flex;
-                flex-wrap: wrap;
+            @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+                display: grid;
+                grid-template-columns: repeat(2, 328px);
                 gap: 32px;
-                column-gap: 30px;
                 justify-content: center;
             }
 
+            @media (max-width: $maxTabletWidth) and (min-width: 1096px) {
+                grid-template-columns: repeat(3, 328px);
+            }
+
+            @media (max-width: $maxTabletWidth) and (min-width: 1456px) {
+                grid-template-columns: repeat(4, 328px);
+            }
+
             @media (max-width: $maxMobWidth) {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 16px;
+            }
+
+            @media (max-width: $maxMobWidth) and (min-width: 688px) {
+                display: grid;
+                grid-template-columns: repeat(2, 328px);
+                justify-content: center;
                 gap: 16px;
             }
         }
