--- a/src/assets/sass/components/news.scss
+++ b/src/assets/sass/components/news.scss
@@ -29,13 +29,25 @@
         gap: 32px;
 
         @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(2, 328px);
+            gap: 32px;
+            justify-content: center;
+            width: 100%;
+        }
+
+        @media (max-width: $maxTabletWidth) and (min-width: 1096px) {
+            grid-template-columns: repeat(3, 328px);
+        }
+
+        @media (max-width: $maxTabletWidth) and (min-width: 1456px) {
+            grid-template-columns: repeat(4, 328px);
         }
 
         @media (max-width: $maxMobWidth) {
             align-self: center;
             display: flex;
+            flex-wrap: wrap;
             flex-direction: column;
             gap: 24px;
         }
@@ -63,6 +75,17 @@
             .main-news__item,
             .main-news__item *{
                 width: 100%;
+            }
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+                display: grid;
+                grid-template-columns: repeat(2, 328px);
+                gap: 32px;
+                justify-content: center;
+            }
+
+            @media (max-width: $maxTabletWidth) and (min-width: 1096px) {
+                grid-template-columns: repeat(3, 328px);
             }
         }
     }
