--- a/src/assets/sass/components/thanks-for-order/thanks-for-order.scss
+++ b/src/assets/sass/components/thanks-for-order/thanks-for-order.scss
@@ -3,6 +3,10 @@
     margin: 0 auto;
     margin-bottom: 48px;
 
+    @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+        max-width: 744px;
+    }
+
     @media (max-width: $maxMobWidth) {
         margin-bottom: 60px;
     }
@@ -10,6 +14,10 @@
     &__list {
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+            padding: 0 24px;
+        }
 
         @media (max-width: $maxMobWidth) {
             flex-direction: column;
@@ -25,17 +33,34 @@
         line-height: 140%;
         text-align: center;
 
+        @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 12px;
+        }
+
         @media (max-width: $maxMobWidth) {
             font-size: 12px;
         }
 
         &:nth-child(1) {
+            max-width: 301px;
             background: url('../assets/img/thanks-for-order/phone.svg') no-repeat top center;
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+                max-width: 179px;
+            }
         }
 
         &:nth-child(2) {
+            max-width: 329px;
             margin-left: -72px;
             background: url('../assets/img/thanks-for-order/computer.svg') no-repeat top center;
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+                max-width: 185px;
+                margin-left: -15px;
+            }
 
             @media (max-width: $maxMobWidth) {
                 margin: 0;
@@ -43,7 +68,12 @@
         }
 
         &:nth-child(3) {
+            max-width: 257px;
             background: url('../assets/img/thanks-for-order/mail.svg') no-repeat top center;
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minMobWidth) {
+                max-width: 119px;
+            }
         }
     }
 }
