--- a/src/assets/sass/components/webinar/webinar-main.scss
+++ b/src/assets/sass/components/webinar/webinar-main.scss
@@ -7,6 +7,12 @@
     max-width: 1654px;
     margin-bottom: 120px;
 
+    @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+        gap: 22px;
+        padding: 0 24px;
+        margin-bottom: 80px;
+    }
+
     @media (max-width: $maxMobWidth) {
         margin-bottom: 80px;
         gap: 16px;
@@ -20,6 +26,11 @@
         padding-bottom: 32px;
         padding-left: 246px;
         background-color: #FFF1F4;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            min-width: 100%;
+            padding: 40px 32px 52px 32px;
+        }
 
         @media (max-width: $maxMobWidth) {
             order: 0;
@@ -109,6 +120,10 @@
             }
         }
 
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            position: relative;
+        }
+
         @media (max-width: $maxMobWidth) {
             position: relative;
             order: 1;
@@ -125,6 +140,13 @@
         align-items: flex-start;
         min-width: 1174px;
         padding-left: 246px;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            min-width: 696px;
+            width: 100%;
+            padding: 0;
+            margin-bottom: 67px;
+        }
 
         @media (max-width: $maxMobWidth) {
             min-width: 100%;
@@ -183,6 +205,10 @@
         margin: 0;
         text-decoration: none;
         color: #000000;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            width: 100%;
+        }
 
         @media (max-width: $maxMobWidth) {
             padding: 22px 16px;
