--- a/src/assets/sass/components/personal-area/log-in.scss
+++ b/src/assets/sass/components/personal-area/log-in.scss
@@ -1,6 +1,11 @@
 .log-in {
     margin-bottom: 200px;
 
+    @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+        padding: 0 24px;
+        margin-bottom: 80px;
+    }
+
     @media (max-width: $maxMobWidth) {
         margin-bottom: 90px;
     }
@@ -8,7 +13,7 @@
     &__title {
         text-align: left;
 
-        @media (max-width: $maxMobWidth) {
+        @media (max-width: $maxTabletWidth) {
             text-align: center;
         }
     }
@@ -18,6 +23,11 @@
         max-width: 1174px;
         padding: 60px 246px;
         background-color: #FFF1F4;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            padding: 32px 27px;
+            margin: 0 auto;
+        }
 
         @media (max-width: $maxMobWidth) {
             padding: 0;
@@ -30,6 +40,10 @@
         align-items: start;
         grid-template-columns: 280px 280px;
         gap: 81px;
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            justify-content: center;
+        }
 
         @media (max-width: $maxMobWidth) {
             display: flex;
@@ -93,6 +107,10 @@
             width: 1px;
             background-color: #FFFFFF;
             content: "";
+
+            @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+                height: 326px;
+            }
 
             @media (max-width: $maxMobWidth) {
                 display: none;
@@ -227,6 +245,14 @@
             position: absolute;
             bottom: 0;
             right: 90px;
+        }
+
+        @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            position: relative;
+            left: -27px;
+            right: 0px;
+            bottom: -32px;
+            width: calc(100% + 54px);
         }
 
         @media (max-width: $maxMobWidth) {
