--- a/src/assets/sass/components/webinar/webinar-action.scss
+++ b/src/assets/sass/components/webinar/webinar-action.scss
@@ -180,8 +180,10 @@
         margin-bottom: 120px;
 
         @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+            position: relative;
             margin-bottom: 80px;
             padding: 0 22px;
+            padding-bottom: 56px;
         }
 
         .main-news__list {
@@ -192,7 +194,6 @@
                 max-width: 100%;
                 overflow-x: scroll;
                 padding: 1px;
-                margin-bottom: 80px;
             }
         }
 
