--- a/src/assets/sass/components/webinar/webinar-get.scss
+++ b/src/assets/sass/components/webinar/webinar-get.scss
@@ -4,7 +4,9 @@
     margin-bottom: 120px;
 
     @media (max-width: $maxTabletWidth) and (min-width: $minTabletWidth) {
+        position: relative;
         padding: 0 22px;
+        padding-bottom: 56px;
     }
 
     @media (max-width: $maxTabletWidth) {
