--- a/src/assets/sass/components/header.scss
+++ b/src/assets/sass/components/header.scss
@@ -41,7 +41,7 @@
             justify-content: space-between;
             margin-bottom: 32px;
 
-            #city {
+            #city-select {
                 display: none;
             }
 
