--- a/src/assets/sass/components/webinar/webinar-get.scss
+++ b/src/assets/sass/components/webinar/webinar-get.scss
@@ -77,11 +77,13 @@
     }
 
     &__name {
+        display: flex;
+        flex-direction: column;
         font-weight: 700;
         font-size: 16px;
         line-height: 140%;
 
-        div {
+        span {
             margin-top: 8px;
             font-weight: 500;
             font-size: 14px;
